libdebian-installer (0.23+0.25.unreleased) UNRELEASED; urgency=low

  * Bastian Blank
    - anna dependency resolver stops on already installed packages.
    - Make debugging output a little bit better to read.

 -- Bastian Blank <waldi@debian.org>  Thu, 20 May 2004 15:48:00 +0200

libdebian-installer (0.23) unstable; urgency=low

  * Bastian Blank
    - Bump revision to 3.
    - Add a special dependency resolver type for anna (checks Kernel-Version
      and Subarchitecture) (unstable interface).
    - Mark the old Kernel-Version resolver as deprecated.
    - Remove backward compatiblity from dependency resolver.
    - Remove two undocumented symbols.
    - Use debhelper udeb support.
    - Add environment support to execution helpers.
    - The size of a hash map is the number of elements, not the size of the
      array.
    - RFC822 parser only allows space and horizontal tab before a value.

 -- Bastian Blank <waldi@debian.org>  Thu, 13 May 2004 17:50:15 +0200

libdebian-installer (0.22) unstable; urgency=low

  * Bastian Blank
    - Fix handling of nonresolvable virtual packages.
    - Fix handling of subarchitecture strings with different length
      (closes: #243692).
  * Joey Hess
    - Add more major numbers for cciss devices.
    - Add support for all of the /dev/ida/ devices. Closes: #243411
    - Add support for /dev/ataraid/ devices.
    - Allow devfs.c to be built as a standalone binary, for simplified
      testing.

 -- Joey Hess <joeyh@debian.org>  Wed, 21 Apr 2004 23:13:06 -0400

libdebian-installer (0.21) unstable; urgency=low

  * Bastian Blank
    - Support diskarrays in mapdevfs. (closes: #235617, #239291)
  * Thiemo Seufer
    - Minor code cleanup in the subarchitecture check.

 -- Joey Hess <joeyh@debian.org>  Mon,  5 Apr 2004 18:49:56 -0400

libdebian-installer (0.20) unstable; urgency=low

  * Bastian Blank
    - Bump revision to 2.
    - Add conversation functions for parts of a package entry
      (exported interface).