@@ -3,8 +3,10 @@ libdebian-installer (0.23+0.25.unreleased) UNRELEASED; urgency=low
   * Bastian Blank
     - anna dependency resolver stops on already installed packages.
     - Make debugging output a little bit better to read.
+    - Make anna dependency resolver permissive again.
+    - Add an option to enable extensive debugging output.
 
- -- Bastian Blank <waldi@debian.org>  Thu, 20 May 2004 15:48:00 +0200
+ -- Bastian Blank <waldi@debian.org>  Sat, 22 May 2004 13:31:13 +0200
 
 libdebian-installer (0.23) unstable; urgency=low
 
